hphp/hack/test/typecheck/switch_change_type2.php.exp
ERROR: File "switch_change_type2.php", line 17, characters 3-112:
This `switch` case cannot be checked for exhaustivity. Please provide a default. Without a default, when none of the cases match, a runtime exception will be thrown. (Typing[4489])
  File "switch_change_type2.php", line 17, characters 11-11:
  The scrutinee has type `int` which is not an enum, enum class, enum class label, null, or nullable or tuples of those types.
ERROR: File "switch_change_type2.php", line 22, characters 14-15:
Invalid argument (Typing[4110])
  File "switch_change_type2.php", line 12, characters 12-14:
  Expected `int`
  File "switch_change_type2.php", line 12, characters 21-24:
  But got `bool`
